--- a/ex026/mq002/estilos/style.css
+++ b/ex026/mq002/estilos/style.css
@@ -1,1 +1,23 @@
 @charset "UTF-8";
+
+/* Configurações gerais */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family:  'Arial Narrow Bold', sans-serif, 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif
+}
+
+html body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: aliceblue;
+    text-shadow: 2px 2px 0px #1526a7;
+    padding: 10px;
+}
