--- a/ex026/mq002/estilos/paisagem.css
+++ b/ex026/mq002/estilos/paisagem.css
@@ -1,1 +1,8 @@
 @charset "UTF-8";
+
+/* Aparelho deitado (landscape) */
+
+body {
+    background: url(../Imagens/cev-landscape.jpg);
+    background-position: left bottom;
+ }
