--- a/Desafios/Desafio mod 4 - 26/estilos/style.css
+++ b/Desafios/Desafio mod 4 - 26/estilos/style.css
@@ -30,6 +30,8 @@ section#login {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.485);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
@@ -41,6 +43,6 @@ section#login > div#imagem {
 }
 
 section#login > div#formulario {
-    display: block;
+    display: block   ;
     padding: 10px;
 }
