--- a/Desafios/Desafio mod 4 - 26/estilos/mediaQuery.css
+++ b/Desafios/Desafio mod 4 - 26/estilos/mediaQuery.css
@@ -35,19 +35,27 @@ Grandes telas: acima de 1200px
     body {
         background-image: linear-gradient(to top, rgb(145, 191, 209), pink);
     }
-    
+
     section#login {
         width: 950px;
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
