--- a/Desafios/Desafio mod 2 - 16 feito/Estilo/style.css
+++ b/Desafios/Desafio mod 2 - 16 feito/Estilo/style.css
@@ -69,7 +69,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    margin-bottom: ;
+    margin-bottom:auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.192);
 
 }
