--- a/Desafios/Desafio mod 4 - 26/estilos/style.css
+++ b/Desafios/Desafio mod 4 - 26/estilos/style.css
@@ -26,7 +26,7 @@ section#login {
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.485);
@@ -54,4 +54,54 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: pink;
+    display: block;
+    height: 40px;
+    width: 100%;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color: rgb(145, 191, 209);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: rgba(26, 112, 146, 0.86);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    border: 1px solid rgb(145, 191, 209);
+    border-radius: 7px;
+    text-decoration: none;
+    color: rgb(54, 150, 187);
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
+ 
+
 }
