--- a/Desafios/Desafio mod 4 - 26/estilos/mediaQuery.css
+++ b/Desafios/Desafio mod 4 - 26/estilos/mediaQuery.css
@@ -16,6 +16,7 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -38,6 +39,7 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -56,6 +58,7 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
