--- a/Desafios/Desafio mod 4 - 26/estilos/style.css
+++ b/Desafios/Desafio mod 4 - 26/estilos/style.css
@@ -61,12 +61,36 @@ form > div.campo {
     display: block;
     height: 40px;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color:rgb(168, 215, 233);
+    font-size: 1em;
+    width: calc(100% - 47px);
+    height: 90%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
